updating helm charts

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,9 +5,4 @@ app:
     type: IngressRoute
     enabled: true
     hosts:
-      - crty.dev
-      - www.crty.dev
-    redirections:
-      - from:
-          - www.crty.dev
-        to: crty.dev
+      - tetoo.crty.dev
