--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,6 +6,7 @@ app:
     hosts:
       - crty.dev
       - www.crty.dev
+      - www-2.crty.dev
     redirections:
       - from:
           - www.crty.dev
